added tests and projects
